updated the review comments

--- a/pages/attach_tag.htm
+++ b/pages/attach_tag.htm
@@ -8,6 +8,7 @@
             </label>
             <br/><br/>
         </div>
-        <a href="#/update_tag/{{todo_id}}" class="btn btn-primary" >Update Tag</a>
+<!--        <a href="#/update_tag/{{todo_id}}" class="btn btn-primary" >Update Tag</a>-->
+        <button type="button" class="btn btn-primary" ng-click="updateTag(todo_id)">Update Tag</button>
     </div>
 </div>
