--- a/index.htm
+++ b/index.htm
@@ -20,9 +20,10 @@
         <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
         <script src="app.js"></script>
         <script src="routes.js"></script>
-        <script src="services.js"></script>
-        <script src="controllers.js"></script>
-        <script src="directives.js"></script>
+        <script src="controllers/createTodoController.js"></script>
+        <script src="controllers/indexToDoController.js"></script>
+        <script src="controllers/editToDoController.js"></script>
+        <script src="controllers/attachTagController.js"></script>
     </head>
     <body>
 
@@ -34,7 +35,10 @@
 				</div>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+					<li><a href="#"><i class="fa fa-home"></i> New</a></li>
+				</ul>
+                <ul class="nav navbar-nav navbar-right">
+					<li><a href="#/index"><i class="fa fa-home"></i> Index</a></li>
 				</ul>
 			</div>
 			</nav>
