--- a/pages/createTodo.htm
+++ b/pages/createTodo.htm
@@ -18,18 +18,14 @@
                 <input type="text" ng-model="todo.status" class="form-control" />
             </label>
             <br/>
-            <label>
-                Tag Id:
-                <input type="text" ng-model="todo.tag_id" class="form-control" />
-            </label>
-            <br/><br/>
+            <br/>
             <label>
                 Is Deleted:
-<!--                <input type="text" ng-model="todo.is_deleted" class="form-control" />-->
                 <input type="radio" ng-model="todo.is_deleted" value="true">  true
                 <input type="radio" ng-model="todo.is_deleted" ng-value="false"> false
             </label>
-        </div>
-        <a href="#/create" class="btn btn-primary">Create Todo</a>
+            <br/>
+        </div>        
+        <button type="button" class="btn btn-primary" ng-click="createTodo()">Create Todo</button>
     </div>
 </div>
