--- a/index.htm
+++ b/index.htm
@@ -15,9 +15,8 @@
         </style>
         
         <!-- load angular via CDN -->
-        <script src="//code.angularjs.org/1.3.0-rc.2/angular.min.js"></script>
-        <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
-        <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
+        <script src="./lib/angular/angular.min.js"></script>
+        <script src="./lib/angular-route/angular-route.min.js"></script>
         <script src="app.js"></script>
         <script src="routes.js"></script>
         <script src="controllers/createTodoController.js"></script>
