--- a/pages/update.htm
+++ b/pages/update.htm
@@ -1,8 +1,8 @@
 <p>
-    <a href="#/">Back to Search</a>
+    <a href="#!/">Back to Search</a>
 </p>
 <p>
-    <a href="#/index">Index</a>
+    <a href="#!/index">Index</a>
 </p>
 
 Todo updated for {{ todo }}
