--- a/index.htm
+++ b/index.htm
@@ -34,10 +34,10 @@
 				</div>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="fa fa-home"></i> New</a></li>
+					<li><a href="#!/"><i class="fa fa-home"></i> New</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
-					<li><a href="#/index"><i class="fa fa-home"></i> Index</a></li>
+					<li><a href="#!/index"><i class="fa fa-home"></i> Index</a></li>
 				</ul>
 			</div>
 			</nav>
