--- a/pages/update_tag.htm
+++ b/pages/update_tag.htm
@@ -1,8 +1,8 @@
 <p>
-    <a href="#/">Back to Search</a>
+    <a href="#!/">Back to Search</a>
 </p>
 <p>
-    <a href="#/index">Index</a>
+    <a href="#!/index">Index</a>
 </p>
 
 Tag updated for ToDo with ID: {{ todo_id }}
